force-app/main/default/objects/Loan_Calculation_Applicant_Product__c/Loan_Calculation_Applicant_Product__c.object-meta.xml
<CustomObject>
    <description>Loan Calculation Applicant Products</description>
    <label>Loan Calculation Applicant Product</label>
    <nameField>
        <displayFormat>LCPA-{000000}</displayFormat>
        <label>Loan Calculation Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Calculation Applicant Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>