force-app/main/default/objects/Loan_Calculation_Applicant_Product__c/fields/Applicant_Id__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Applicant lookup</description>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Loan Calculation Applicant Products</relationshipLabel>
    <relationshipName>Loan_Calculation_Applicant_Products</relationshipName>
    <type>Lookup</type>
</CustomField>