force-app/main/default/objects/Loan_Calculation_Applicant_Product__c/fields/Loan_Amount_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_Number__c</fullName>
    <description>Loan Amount</description>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>