force-app/main/default/objects/Loan_Calculation_Applicant_Product__c/fields/Loan_Calculation_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Loan_Calculation_Product_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan Calculation Product lookup</description>
    <label>Loan Calculation Product</label>
    <referenceTo>Loan_Calculation_Product__c</referenceTo>
    <relationshipLabel>Loan Calculation Applicant Products</relationshipLabel>
    <relationshipName>Loan_Calculation_Applicant_Products</relationshipName>
    <type>Lookup</type>
</CustomField>