force-app/main/default/objects/Loan_Calculation_Applicant_Product__c/fields/Monthly_Payment_Ownership_Number__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_Ownership_Number__c</fullName>
    <description>Monthly Payment Ownership</description>
    <label>Monthly Payment Ownership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>